--- a/Dimensiunea Religioasa.csproj
+++ b/Dimensiunea Religioasa.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Content Include="DLLRef\Bunifu_UI_v1.5.3.dll" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
